--- a/src/App.css
+++ b/src/App.css
@@ -55,15 +55,15 @@
 .square-high {
   border: 1px solid #999;
   float: left;
-  font-size: 16px;
+  font-size: calc(100vw / 42 * 0.5);
   font-weight: bold;
-  line-height: 34px;
-  height: 34px;
+  width: calc(100vw / 42);
+  height: calc(100vw / 42);
+  padding-top: 100%;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
 }
 
 .square {
